# AxioNN

./: README.md  pyproject.toml
examples/: transformer.py
src/: __init__.py
src/axionn/alignment/: stateless.py
src/axionn/data/: stream.py
src/axionn/nn/: __init__.py  attention.py  conv.py  ssm.py
src/axionn/training/: __init__.py  logging.py  steps.py
tests/: test_axionn.py
